--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"style": "dark", "collections": [{"path": "C:/Users/Fisiek/Documents/Informatyka studies/Python/Projects/RePrinTex/data/testData", "name": "testColl"}, {"path": "C:/Users/Fisiek/Documents/Informatyka studies/Python/Projects/RePrinTex/data", "name": "test"}]}
+{"style": "light", "collections": [{"path": "C:/Users/Alicja/Alicja/Projects/RePrinTex/data/testData", "name": "test"}]}
