--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ Pillow==8.2.0
 pyparsing==2.4.7
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
-PyQt5-sip==12.8.1
+PyQt5-sip==12.13.0
+PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt==5.15.2
 pytesseract==0.3.7
 python-dateutil==2.8.1
 six==1.15.0
