--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"style": "light", "collections": [{"path": "C:/Users/Alicja/Alicja/Projects/RePrinTex/data/testData", "name": "test"}]}
+{"style": "dark", "collections": []}
